unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/ET_Vehicle_Registration_Inspection_Fee__c.object-meta.xml
<CustomObject>
    <label>Vehicle Registration Inspection Master</label>
    <nameField>
        <displayFormat>VRIF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Registration Inspection Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>