unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/fields/ET_Inspection_Fee_4th_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Inspection_Fee_4th_Year__c</fullName>
    <label>Inspection Fee (4th Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>