unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/fields/ET_Registration_Fee_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Registration_Fee_1st_Year__c</fullName>
    <label>Registration Fee (1st Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>