unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/fields/ET_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Type Master</label>
    <referenceTo>ET_Vehicle_Type_Master__c</referenceTo>
    <relationshipName>Vehicle_Registration_Inspection_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>