unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/fields/Vehicle_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sub_Type__c</fullName>
    <formula>text( ET_Vehicle_Type__r.ET_Vehicle_Sub_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Sub Type</label>
    <type>Text</type>
</CustomField>