unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/fields/Vehicle_Type_name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type_name__c</fullName>
    <formula>text(ET_Vehicle_Type__r.ET_Vehicle_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>