unpackaged/main/default/objects/ET_Vehicle_Registration_Inspection_Fee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Vehicle_Type__c</columns>
    <columns>Vehicle_Type_name__c</columns>
    <columns>Vehicle_Sub_Type__c</columns>
    <columns>ET_Emirates__c</columns>
    <columns>ET_Registration_Fee_1st_Year__c</columns>
    <columns>ET_Registration_Fee_2nd_Year__c</columns>
    <columns>ET_Registration_Fee_3rd_Year__c</columns>
    <columns>ET_Registration_Fee_4th_Year__c</columns>
    <columns>ET_Registration_Fee_5th_Year__c</columns>
    <columns>ET_Registration_Fee_6th_Year__c</columns>
    <columns>ET_Registration_Fee_7th_Year__c</columns>
    <columns>ET_Registration_Fee_8th_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>